# Rust-Maf

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  mod.rs  tests.rs
src/classes/: calculus.rs  functions.rs  mod.rs  polynomial.rs  term.rs  traits.rs  values.rs  varfunc.rs
src/classes/structures/: polynomial.rs  term.rs
src/classes/traits/: calculus.rs  expression.rs  maf.rs  mod.rs
src/old/: lib.rs  main.rs
src/old/classes/: functions.rs  polynomial.rs  term.rs  values.rs
src/old/syntax/: mod.rs  parser.rs
src/syntax/: lexer.rs  parser.rs
