[package]
name = "rust_maf"
version = "0.1.0"
edition = "2018"
authors = ["Ben Jones", "Joseph Abbey"]
repository = "https://github.com/BenjaminJones07/Rust-Maf/"
license = "MIT"
description = "A Rust library for maths."
exclude = ["**/old/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
